removed usage of proprietary Base64 conversion API by official Java 8 utility